--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
   flex-direction: column;
   gap: 3px;
   margin-right: 10%;
+  visibility: hidden;
 }
 .invisible{
   
@@ -370,6 +371,7 @@ ul {
     border-radius: 4px;
     position: absolute;
     right: 10px;
+    visibility: visible;
   }
 
   .toptext h1 {
